# mantis

./: .gitignore  CMakeLists.txt  PostAnalysis.cc  QuickAnalysis.cc  README.md  Sampling.C  Sampling.cc  brems_distributions.root  configure.sh  configure_parallel.sh  init_vis.mac  input_spectrum.txt  makefile  mantis.cc  mantis.in  parallel.sh  setup.sh  stitch.sh  submit_geant4.slurm  vis.mac  vis_save.mac
Enrichment_Analysis/: EnrichmentAnalysis.cc  EnrichmentAnalysis.hh
Input_Files/: ChopOff.in  Sampling.cc  brems_distributions.root  mantis.in  mantisOff.in  vis_save.mac
Run_Analysis/: Analysis.cc  Cherenkov.cc  CherenkovMaster.cc  CopyTreeNoWeight.cc  CopyTrees.cc  EventCheck.cc  MantisCopyATree.cc  MantisCopyATreeNoWeight.cc  MantisROOT.cc  PrintResults.cc  QuickAnalysis.cc  Rebin.cc  Rebin.sh  RebinAnalysis.sh  Rescale.cc  SNR.cc  WeightHisto.cc  ZTest.cc  hIntegral.cc  stitch.sh
Runtime/: init_vis.mac  mantis.in  mantisOff.in  mantis_mpi.in  vis.mac  vis_save.mac
Slurm_Run_Files/: runBatch.sh  runBatchOff.sh  submit_geant4.slurm  submit_geant4Off.slurm
include/: ActionInitialization.hh  Analysis.hh  Cargo.hh  CargoMessenger.hh  ChopperMessenger.hh  ChopperSetup.hh  Collimator.hh  DetectorConstruction.hh  DetectorInformation.hh  DetectorMessenger.hh  EventAction.hh  EventCheck.hh  EventMessenger.hh  G4NRF.hh  G4NRFPhysics.hh  HistoManager.hh  HistoManagerMessenger.hh  Linac.hh  MPIManager.hh  MPIManagerMessenger.hh  MaterialProperties.hh  MySession.hh  PGAMessenger.hh  PMTHit.hh  PMTSD.hh  PhysicsListNew.hh  PhysicsListOld.hh  PrimaryGenActionMessenger.hh  PrimaryGeneratorAction.hh  RootDataManager.hh  RootDataMessenger.hh  RunAction.hh  RunInformation.hh  SourceInformation.hh  StackingAction.hh  StepMessenger.hh  SteppingAction.hh  TrackingAction.hh  TrackingMessenger.hh  Trajectory.hh  (+7 more)
src/: ActionInitialization.cc  Analysis.cc  AngularCorrelation.cc  Cargo.cc  CargoMessenger.cc  ChopperMessenger.cc  ChopperSetup.cc  Collimator.cc  DetectorConstruction.cc  DetectorInformation.cc  DetectorMessenger.cc  EventAction.cc  EventCheck.cc  EventMessenger.cc  G4NRF.cc  G4NRFNuclearLevel.cc  G4NRFNuclearLevelManager.cc  G4NRFPhysics.cc  HistoManager.cc  HistoManagerMessenger.cc  Linac.cc  MPIManager.cc  MPIManagerMessenger.cc  MaterialProperties.cc  MySession.cc  PGAMessenger.cc  PMTHit.cc  PMTSD.cc  PhysicsListNew.cc  PhysicsListOld.cc  PrimaryGenActionMessenger.cc  PrimaryGeneratorAction.cc  RootDataManager.cc  RootDataMessenger.cc  RunAction.cc  RunInformation.cc  SourceInformation.cc  StackingAction.cc  StepMessenger.cc  SteppingAction.cc  (+7 more)
